# iowatch

./: Cargo.toml  PKGBUILD  README.md
src/: lib.rs  main.rs
tests/: iowatch.bats
