[package]
name = "iowatch"
version = "0.2.0"
authors = ["Mauri de Souza Meneguzzo <mauri870@gmail.com>"]
edition = "2018"

[dependencies]
notify = "4.0.17"
thiserror = "1.0.23"
anyhow = "1.0"
clap = { version = "4.0.4", features = ["derive"]}
nix = { version = "0.24.2", features = ["process"]}
ignore = { git = "https://github.com/mauri870/ripgrep", branch = "ignore-panic-outside-root" }
