[package]
name = "iowatch"
version = "0.2.0"
authors = ["Mauri de Souza Meneguzzo <mauri870@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.23"
anyhow = "1.0"
clap = { version = "4.0.4", features = ["derive"]}
nix = { git = "https://github.com/mauri870/nix", branch = "master", features = ["process"]}
ignore = { git = "https://github.com/mauri870/ripgrep", branch = "ignore-panic-outside-root" }
notify-debouncer-mini = "0.2.1"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
ctrlc = "3.2.3"
