[package]
name = "iowatch"
version = "0.4.0"
authors = ["Mauri de Souza Meneguzzo <mauri870@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0"
clap = { version = "4.0.4", features = ["derive", "cargo"]}
log = "0.4.17"
env_logger = "0.11.8"
nix = { git = "https://github.com/mauri870/nix", branch = "master", features = ["process"]}
ignore = { git = "https://github.com/mauri870/ripgrep", branch = "ignore-panic-outside-root" }
notify-debouncer-mini = "0.6.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
ctrlc = "3.2.3"
